# tp_raytracing

./: .gitignore  CMakeLists.txt  README.md
projet/: image.ppm
projet/src/lib/common/: backtrace.cpp
projet/src/local/: main.cpp
projet/src/ray_tracing/primitives/: plane.cpp  sphere.cpp
projet/src/ray_tracing/render_engine/: render_engine.cpp
